# lattice

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Justfile  README.md  config.toml.example  install.ps1  install.sh  package.json  plan.md  prek.toml
.github/workflows/: agent-ci.yml  agent-release.yml  ci-quality.yml  claude-code-review.yml  claude.yml  docker.yml  spine-ci.yml  spine-docker.yml  surface-ci.yml
.opencode/: opencode.jsonc
.opencode/commands/: speckit.plan.md  speckit.product-forge.api-docs.md  speckit.product-forge.backfill.md  speckit.product-forge.bridge.md  speckit.product-forge.change-request.md  speckit.product-forge.code-review.md  speckit.product-forge.experiment-design.md  speckit.product-forge.feature-flag-cleanup.md  speckit.product-forge.forge.md  speckit.product-forge.i18n-harvest.md  speckit.product-forge.implement.md  speckit.product-forge.migration-plan.md  speckit.product-forge.monitoring-setup.md  speckit.product-forge.plan.md  speckit.product-forge.portfolio.md  speckit.product-forge.pre-impl-review.md  speckit.product-forge.problem-discovery.md  speckit.product-forge.product-spec.md  speckit.product-forge.release-readiness.md  speckit.product-forge.research.md  speckit.product-forge.retrospective.md  speckit.product-forge.revalidate.md  speckit.product-forge.security-check.md  speckit.product-forge.status.md  speckit.product-forge.sync-verify.md  speckit.product-forge.tasks.md  speckit.product-forge.test-plan.md  speckit.product-forge.test-run.md  speckit.product-forge.tracking-plan.md  speckit.product-forge.verify-full.md  speckit.review.code.md  speckit.review.comments.md  speckit.review.errors.md  speckit.review.run.md  speckit.review.simplify.md  speckit.review.tests.md  speckit.review.types.md  speckit.time-machine.analyze.md  speckit.time-machine.next.md  speckit.time-machine.status.md
.product-forge/: config.yml
.serena/: project.yml
.serena/memories/: tech_stack.md
.specify/: extensions.yml  feature.json  init-options.json  preset-catalogs.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/presets/: .registry
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
agent/: .gitignore  Cargo.toml  README.md  lattice-agent.service  lattice-tray.service
agent/src/: cache.rs  config.rs  config_edit.rs  extract.rs  format.rs  icon.rs  ipc.rs  ipc_client.rs  lib.rs  main.rs  platform.rs  scan.rs  status.rs  time.rs  update.rs
agent/tests/fixtures/update/: README.md  desktop-smoke.sh  manual-guidance.txt  releases.json
docs/: lattice-development-plan.md  lattice-implementation-plan.md  tracking-design-principles.md  tracking-development-plan.md
docs/accessibility/: agent-indexer.md  attachments.md  capture-inbox.md  desktop-companions.md  product-updates.md  retrieval-search.md  (+5 more)
scripts/: lattice-capture.sh
spine/: .dockerignore  .env.example  .gitignore  .markdownlint.json  .prettierignore  CLAUDE.md  Dockerfile  README.md  docker-compose.relay.yml  docker-compose.yml  package.json  skills-lock.json  tsconfig.json
src/: index.ts  search.ts  signal-relay.ts
surface/: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  package.json  svelte.config.js  vite.config.ts
tests/: windows-installer-assets.ps1
(+464 files in other folders)
