[package]
name = "lattice-agent"
version = "0.1.0"
edition = "2024"
description = "Local file indexer for the Lattice knowledge system"

[[bin]]
name = "lattice-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1"
blake3 = "1"
glob = "0.3"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

