[package]
name = "lattice-agent"
version = "0.11.0"
edition = "2024"
description = "Local file indexer for the Lattice knowledge system"

[dependencies]
anyhow = "1"
blake3 = "1"
glob = "0.3"
mime_guess = "2"
notify-rust = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
eframe = { version = "0.29", optional = true, default-features = false, features = ["default_fonts", "glow"] }
rfd = { version = "0.15", optional = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[target.'cfg(unix)'.dependencies]
ksni = { version = "0.3", features = ["blocking"] }

[target.'cfg(windows)'.dependencies]
# tray-icon provides the Windows system tray; it uses its own message pump on Windows.
tray-icon = "0.17"

[[bin]]
name = "lattice-agent"
path = "src/main.rs"

[[bin]]
name = "lattice-tray"
path = "src/bin/lattice-tray.rs"

[[bin]]
name = "lattice-tray-windows"
path = "src/bin/lattice-tray-windows.rs"

[[bin]]
name = "lattice-capture"
path = "src/bin/lattice-capture.rs"
required-features = ["gui"]

[[bin]]
name = "lattice-config"
path = "src/bin/lattice-config.rs"
required-features = ["gui"]

[features]
default = []
# `gui` enables the eframe-based binaries (lattice-capture's input prompt and
# lattice-config's settings editor). Tray + agent + indexer build without it.
gui = ["dep:eframe", "dep:rfd"]
